--- a/charts/loki/Chart.yaml
+++ b/charts/loki/Chart.yaml
@@ -16,3 +16,6 @@ dependencies:
     repository: file://../chart_deps/konghq/plugins
     alias: kong-plugins
     condition: kong-plugins.enabled
+  - name: core
+    version: 0.1.0
+    repository: file://../chart_deps/app/core
