change loki vars in env

--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -154,3 +154,21 @@ chart_apps:
     enabled: false
     values: |
       global: {{ .Values.global | toYaml | nindent 4 }}
+      loki:
+        nameOverride: "loki-{{ .Values.global.env.name }}"
+        loki:
+          storage:
+            type: "{{ .Values.global.bucket.type }}"
+            bucketNames:
+              chunks: "{{ .Values.global.company.name }}-loki-{{ .Values.global.env.name }}"
+              ruler: "{{ .Values.global.company.name }}-loki-{{ .Values.global.env.name }}"
+              admin: "{{ .Values.global.company.name }}-loki-{{ .Values.global.env.name }}"
+          schemaConfig:
+            configs:
+              - from: 2025-05-01
+                object_store: "{{ .Values.global.bucket.type }}"
+                store: tsdb
+                schema: v13
+                index:
+                  prefix: index_
+                  period: 24h
