charts/fluent: fix parser

--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -104,7 +104,7 @@ fluentbit:
         match: 'kube.fluent.{{ .Release.Name }}-fluentbit*'
         filters:
           fluentbit:
-            pareser:
+            parser:
               parser: '{{ .Release.Name }}-parsers-fluentbit'
               keyName: log
 
