charts/fluent: fix ordinal

--- a/charts/chart_deps/fluent/fluentbit/filters/templates/clusterfilters.yaml
+++ b/charts/chart_deps/fluent/fluentbit/filters/templates/clusterfilters.yaml
@@ -37,6 +37,6 @@ spec:
   matchRegEx: {{ tpl . $ | quote }}
   {{- end }}
   {{- with $cl_filter_obj.ordinal}}
-  ordinal: {{ tpl . $ | quote }}
+  ordinal: {{ . }}
   {{- end }}
 {{- end }}
