--- a/charts/chart_deps/fluent/fluentbit/filters/templates/filters.yaml
+++ b/charts/chart_deps/fluent/fluentbit/filters/templates/filters.yaml
@@ -39,6 +39,6 @@ spec:
   matchRegEx: {{ tpl . $ | quote }}
   {{- end }}
   {{- with $filter_obj.ordinal}}
-  ordinal: {{ tpl . $ | quote }}
+  ordinal: {{ . }}
   {{- end }}
 {{- end }}
