--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -56,7 +56,7 @@ fluentbit:
           port: 3100
           labels:
             env: "{{ .Values.global.env.name }}"
-            job: fluent-bit
+            job: fluentbit-main
             pod: $kubernetes['pod_name']
             container: $kubernetes['container_name']
             namespace: $kubernetes['namespace_name']
