chart_deps/fluent/fluentbit/output: null output type

--- a/charts/chart_deps/fluent/fluentbit/outputs/templates/clusteroutputs.yaml
+++ b/charts/chart_deps/fluent/fluentbit/outputs/templates/clusteroutputs.yaml
@@ -136,4 +136,7 @@ spec:
   tcp:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
+  {{- if (hasKey $cl_output_obj "null") }}
+  "null": {}
+  {{- end }}
 {{- end }}
