--- a/charts/chart_deps/fluent/fluentbit/outputs/templates/outputs.yaml
+++ b/charts/chart_deps/fluent/fluentbit/outputs/templates/outputs.yaml
@@ -137,4 +137,7 @@ spec:
   tcp:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
+  {{- if (hasKey $output_obj "null") }}
+  "null": {}
+  {{- end }}
 {{- end }}
