--- a/charts/loki/values.yaml
+++ b/charts/loki/values.yaml
@@ -37,7 +37,6 @@ loki:
   global:
     extraArgs:
       - '-log.format=json'
-  #nameOverride: "loki-{{ .Values.global.env.name }}"
   test:
     enabled: false
   lokiCanary:
@@ -51,41 +50,15 @@ loki:
       max_label_names_per_series: 20
       discover_log_levels: false
       discover_service_name: []
-      #log_level_fields: []
     analytics:
       reporting_enabled: false
     storage:
-    #  type: "{{ .Values.global.bucket.type }}"
-    #  bucketNames:
-    #    chunks: "{{ .Values.global.company.name }}-loki-{{ .Values.global.env.short_name }}"
-    #    ruler: "{{ .Values.global.company.name }}-loki-{{ .Values.global.env.short_name }}"
-    #    admin: "{{ .Values.global.company.name }}-loki-{{ .Values.global.env.short_name }}"
       use_thanos_objstore: false
-      #object_store:
-        #type: "{{ .Values.global.bucket.type }}"
-        #gcs:
-          #bucket_name:  "{{ .Values.global.company.name }}-loki-{{ .Values.global.env.short_name }}"
-          #service_account: ""
-    #schemaConfig:
-    #  configs:
-    #    - from: 2025-05-01
-    #      object_store: "{{ .Values.global.bucket.type }}"
-    #      store: tsdb
-    #      schema: v13
-    #      index:
-    #        prefix: index_
-    #        period: 24h
+    schemaConfig:
+      configs: []
   gateway:
     enabled: false
   ingress:
     enabled: false
-    ingressClassName: "konghq"
-    annotations:
-      konghq.com/plugins: loki-ip-restriction
-      cert-manager.io/cluster-issuer: letsencrypt-kongh
-    hosts:
-      - loki.{{ .Values.global.company.domain.env }}"
-    tls:
-      - secretName: loki-read-tls
-        hosts:
-          - loki.{{ .Values.global.company.domain.env }}"
+  ruler:
+    enabled: false
