--- a/charts/loki/values.yaml
+++ b/charts/loki/values.yaml
@@ -49,9 +49,11 @@ loki:
       discover_log_levels: false
       discover_service_name: []
       ingestion_rate_mb: 90
-      ingestion_burst_size_mb: 20
+      ingestion_burst_size_mb: 40
       max_global_streams_per_user: 9000
       max_label_names_per_series: 20
+      per_stream_rate_limit: 15MB
+      per_stream_rate_limit_burst: 30MB
     analytics:
       reporting_enabled: false
     storage:
